Making a correction on the bioreactor simulation.
For the bioreactor simulation, there was a parameter that had not been
included in the simulation, while it was important. That was how much
biomass was produced according to the bibliography. The simulation has
been corrected and documented (to an extent). It will be fully
documented in the next commit.

--- a/3rd_exam_files/methods_streams_aspen_2.org
+++ b/3rd_exam_files/methods_streams_aspen_2.org
@@ -14,11 +14,12 @@
 * Steam Explosion
 To steam explosion είναι η πρώτη διεργασία που χρησιμοποιείται με βάση το διάγραμμα ροής της διεργασίας. Σκοπός του είναι να μπορέσει με χρήση ατμού σε υψηλή πίεση και θερμοκρασία να κάνει ένα πρώτο διαχωρισμό της βιομάζας. Συγκεκριμένα, διώχνει το σημαντικότερο ποσοστό της ημικυτταρίνης η οποία είναι η πιό υδατοδιαλυτή και θερμοευαίσθητη μεταξύ αυτής, της κυτταρίνης και της λιγνίνης.
 
-Το ρεύμα εισόδου είναι 200000 τόνοι πυρηνόξυλο το οποίο ορίστηκε ως ένα Nonconventional component και τα στοιχεία που απαιτούνται για αυτό (proximate & ultimate analysis) βρέθηκαν βιβλιογραφικά [[cite:&koutsomitopoulouPreparationCharacterizationOlive2014;&gonzalezCombustionOptimisationBiomass2004]] 
+Το ρεύμα εισόδου είναι 200000 τόνοι πυρηνόξυλο το οποίο ορίστηκε ως ένα Nonconventional component και τα στοιχεία που απαιτούνται για αυτό (proximate & ultimate analysis) βρέθηκαν βιβλιογραφικά
+[cite:@gonzalezCombustionOptimisationBiomass2004; @koutsomitopoulouPreparationCharacterizationOlive2014]
 
-Στην έξοδο υπάρχουν τρία ρεύματα. Το ένα ρεύμα έχει όλη την κυτταρίνη και τη λιγνίνη οι οποίες δεν διασπάστηκαν θερμικά. Οι ενώσεις αυτές ορίστηκαν στο Aspen ως Nonconventional compounds και τα δεδομένα που απαιτούνται βρέθηκαν από τη βάση δεδομένων [[https://phyllis.nl/Browse/Standard/ECN-Phyllis#][Phyllis2]]. Το δεύτερο είναι η διαλυμένη ημικυτταρίνη που έχει αυτουδρολυθεί στο περιβάλλον της έκρηξης ατμού παράγοντας ξυλόζη, άλλες πεντόζες και εξόζες (καθώς ήταν όλες μικρές ποσότητες, υπολογίστηκαν υποθέτοντας ότι όλες οι ζάχαρες που δεν είναι ξυλόζη στο ρεύμα αυτό είναι αραβινόζη), διάφορες φαινολικές ενώσεις από την διάσπαση της λιγνίνης (για τον ίδιο λόγο θεωρήθηκαν όλες φαινόλη). Η σύσταση του ρεύματος αυτού υπάρχει στην βιβλιογραφία [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] . Το τρίτο ρεύμα είναι αέριο. Κατά την έκρηξη ατμού, υπάρχει απώλεια μάζας από την τροφοδοσία μέχρι τα δύο παραπάνω ρεύματα εξόδου. Αυτό συμβαίνει διότι η βιομάζα είναι θερμοευαίσθητη και ένα κομμάτι της διασπάται θερμικά. Για να μην γίνει ολοκληρωμένη ανάλυση του κλάσματος που διασπάστηκε, θεωρήθηκε πως όλη η αρχική υγρασία έγινε νερό (το οποίο με βάση την θερμοδυναμική κατανέμεται και στην υγρή και στην αέρια φάση σε ένα βαθμό), όλο το άζωτο της βιομάζας απελευθερώθηκε ως αέριο και οι υπόλοιπες απώλειες αποτελούν παραγωγή CO_2.
+Στην έξοδο υπάρχουν τρία ρεύματα. Το ένα ρεύμα έχει όλη την κυτταρίνη και τη λιγνίνη οι οποίες δεν διασπάστηκαν θερμικά. Οι ενώσεις αυτές ορίστηκαν στο Aspen ως Nonconventional compounds και τα δεδομένα που απαιτούνται βρέθηκαν από τη βάση δεδομένων [[https://phyllis.nl/Browse/Standard/ECN-Phyllis#][Phyllis2]]. Το δεύτερο είναι η διαλυμένη ημικυτταρίνη που έχει αυτουδρολυθεί στο περιβάλλον της έκρηξης ατμού παράγοντας ξυλόζη, άλλες πεντόζες και εξόζες (καθώς ήταν όλες μικρές ποσότητες, υπολογίστηκαν υποθέτοντας ότι όλες οι ζάχαρες που δεν είναι ξυλόζη στο ρεύμα αυτό είναι αραβινόζη), διάφορες φαινολικές ενώσεις από την διάσπαση της λιγνίνης (για τον ίδιο λόγο θεωρήθηκαν όλες φαινόλη). Η σύσταση του ρεύματος αυτού υπάρχει στην βιβλιογραφία [cite:@fernandez-bolanosSteamexplosionOliveStones2001]. Το τρίτο ρεύμα είναι αέριο. Κατά την έκρηξη ατμού, υπάρχει απώλεια μάζας από την τροφοδοσία μέχρι τα δύο παραπάνω ρεύματα εξόδου. Αυτό συμβαίνει διότι η βιομάζα είναι θερμοευαίσθητη και ένα κομμάτι της διασπάται θερμικά. Για να μην γίνει ολοκληρωμένη ανάλυση του κλάσματος που διασπάστηκε, θεωρήθηκε πως όλη η αρχική υγρασία έγινε νερό (το οποίο με βάση την θερμοδυναμική κατανέμεται και στην υγρή και στην αέρια φάση σε ένα βαθμό), όλο το άζωτο της βιομάζας απελευθερώθηκε ως αέριο και οι υπόλοιπες απώλειες αποτελούν παραγωγή CO_2.
 
-Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου [[cite:&fernandez-bolanosSteamexplosionOliveStones2001;&fernandez-bolanosCharacterizationLigninObtained1999]]. Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
+Ο αντιδραστήρας του Steam Explosion ορίστηκε ως ένας RYield, καθώς δεν ορίζεται κάποια κινητική για την διεργασία αυτή, αλλά ξέρουμε βιβλιογραφικά τα ρεύματα εξόδου [cite:@fernandez-bolanosSteamexplosionOliveStones2001; @fernandez-bolanosCharacterizationLigninObtained1999]. Το θερμοδυναμικό μοντέλο που επιλέχθηκε είναι το μοντέλο SRK καθώς το σύστημα είναι ένα χημικό σύστημα σε υψηλή πίεση και ένα από τα μοντέλα που προτείνει το method assistant του Aspen για τέτοια συστήματα είναι το SRK.
 
 Για περισσότερες πληροφορίες κοιτάξτε το αρχείο [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion.org][αυτό]] . Το σχετικό αρχείο του Aspen βρίσκεται [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Aspen/steam_explosion_3phases.apwz][εδώ]]. Παρακάτω φαίνονται οι πληροφορίες αυτές και πινακοποιημένες.
 
