--- a/bioreactor_stoichiometry.org
+++ b/bioreactor_stoichiometry.org
@@ -40,3 +40,23 @@
 
 Σε πρώτη φάση, μπορεί η προσωμοίωση να γίνει στην απλουστευμένη περίπτωση ότι γλυκόζη και οξυγόνο, δίνουν γλυκερόλη, διοξείδιο του άνθρακα και νερό, κυρίως για να εξοικειωθώ με τους batch αντιδραστήρες στο ασπεν και να δοκιμάσω κάτι. Σε επόμενη φάση θα αναλυθεί η παραπάνω συνολική αντίδραση και οι διαχωρισμοί που απαιτεί. Για την στοιχειομετρία της αντίδρασης \( C_6H_{12}O_6 + O_2 \rightarrow C_3H_8O_3 + CO_2 +H_2O \) έχουμε 2 βαθμούς ελευθερίας ενώ οι υπόλοιποι συντελεστές καθορίζονται από τα mass balances C, H, O. Αν υποθέσουμε ότι οι συντελεστές γλυκερόλης και γλυκόζης είναι ίδιοι με αυτούς της συνολικής αντίδρασης τότε έχουμε ένα πλήρως ορισμένο σύστημα. Και καθώς αυτά τα δύο προκύπτουν από τα ίδια πειραματικά δεδομένα με την κινητική, είναι μία έγκυρη πηγή. Άρα, σε πρώτη φάση θα εξεταστεί η αντίδραση
 \( 1.22 C_6H_{12}O_6 + 3.82O_2 \rightarrow C_3H_8O_3 + 4.32CO_2 + 3.32H_2O \) .
+
+Όπως έχει αναφερθεί στα αρχεία των σχετικών προσομοιώσεων, ο ρυθμός της αντίδρασης αυτής είναι πολύ μεγαλύτερος από ότι θα έπρεπε με αποτέλεσμα η αντίδραση να τελειώνει σε μισή ώρα. Μάλλον, αυτό που φταίει είναι ότι παράγεται πολύ βιομάζα. Όμως, διαπιστώθηκε πως ξέρουμε την τελική συγκέντρωση της βιομάζας στον αντιδραστήρα. Όμως, δεν μπορούμε να ξέρουμε τον ακριβή στοιχειομετρικό συντελεστή αν δεν ξέρουμε τον μοριακό τύπο, για αυτό η γνώση αυτή προσθέτει μία παραπάνω εξίσωση. Ακόμη, ξέρουμε πως ο αντιδραστήρας λειτουργεί τυπικά με αερισμό 0.1-0.5 vvm (volume of air per volume of liquid per minute). Άρα, είναι γνωστός ο συντελεστής του οξυγόνου και δεν αποτελεί άγνωστο. Άρα, οι εξισώσεις που διαμορφώνονται είναι 5 με 7 αγνώστους.
+
+Το σύστημα είναι ως εξής
+\[ \begin{align*} 4.167 = SbCb + S_{CO2} \\ 6.333 = SbHb + 2S_{H_2O} \\ 4.94 = SbOb + 2S_{CO2} + S_{H_2O} \\ 0.05 = SbNb \\ Sb = \frac{10.385}{12Cb+16Ob+Hb+14Nb}    \end{align*} \]
+
+Η επίλυση του συστήματος αυτού είναι αρκετά δύσκολη και έγινε με την fsolve του Matlab. Λόγω της πολυπλοκότητας του συστήματος, απαιτείται αρκετό trial and error για να βρεθεί το σύστημα σε μία ευσταθή λύση και ακόμη περισσότερο για να βρεθεί λύση που έχει νόημα (όλοι οι άγνωστοι είναι θετικοί και ο στοιχειομετρικός συντελεστής βιομάζας είναι μικρότερος του 1). Στο trial and error αυτό, μεταβαλλόντουσαν όχι μόνο οι αρχικές συνθήκες του αλγορίθμου αλλά και οι βαθμοί ελευθερίας του συστήματος. Καθώς οι συντελεστές CO_{2} και H_{2}O προκαλούν του ίδιου τύπου μεταβολές στο σύστημα και η αύξηση τους οδηγεί απομάκρυνση από το σημείο ισορροπίας μετά από ένα σημείο, θεωρήθηκε απαραίτητο να μεταβληθεί και η παροχή οξυγόνου και να μην χρησιμοποιηθεί η βιβλιογραφική.
+
+Το σύστημα μπόρεσε να συγκλίνει για τις εξής τιμές των 8 αγνώστων:
+| Άγνωστος |   Τιμή |
+|----------+--------|
+| S_b      | 0.4519 |
+| C_b      |   1.48 |
+| H_b      |   2.95 |
+| O_b      |  0.048 |
+| N_b      |   0.11 |
+| S_{O2}   |   2.89 |
+| S_CO2    |    3.5 |
+| S_{H2O}  |    2.5 |
+και αρχικές τιμές S_b = 5, C_b = 0.208, H_b = 0.3165, O_b = 0.247, N_b = 2.5e-4. Είναι σίγουρο πως το σύστημα έχει πολλές λύσεις και αυτή δεν είναι η μοναδική που βγάζει νόημα, αλλά εφόσον βρέθηκα κάποια που βγάζει και λόγω της πολυπλοκότητας που εμπεριέχεται στο να βρεί κανείς μία λογική λύση για το σύστημα αυτό, η προσομοίωση θα προχωρήσει με αυτό.
