--- a/biomass_modeling_aspen.org
+++ b/biomass_modeling_aspen.org
@@ -42,3 +42,14 @@
 | Ενέργεια Gibbs     | 1838.1 (kJ/mol)   |
 
 Τρέχοντας την προσωμοίωση, παρατηρούμε πως το Aspen ζητάει αρκετά περισσότερα δεδομένα από αυτά δυστυχώς. Θέλει γραμμομοριακό όγκο (ο οποίος μπορεί να υπολογιστεί από την πυκνότητα και το μοριακό βάρος), κρίσιμες συνθήκες (πίεση, όγκο και θερμοκρασία) και μία σταθερά του μοντέλου Rackett. Για τον κρίσιμο όγκο, βρέθηκε η αναλογία του κρίσιμου όγκου με τον όγκο στους 25 \( ^oC \) για το νερό και υποτέθηκε παρόμοια. Η κρίσιμη και θερμοκρασία υποτέθηκαν καθώς δεν υπάρχουν δεδομένα για αυτά αλλά ούτε πρόκειται να επηρεάσουν πρακτικά το αποτέλεσμα. Στην πράξη, ο αντιδραστήρας λειτουργεί σε πολύ χαμηλή θερμοκρασία και πίεση για να μας ενδιαφέρουν. Η σταθερά του μοντέλου Rackett σύμφωνα με το help του Aspen είναι από 0.1 εώς 1. Για αυτό υποτέθηκε η τιμή 0.5. Καθώς το μοντέλο αυτό καθορίζει γραμμομοριακό όγκο υγρού, ούτε αυτό έχει πρακτικά σημασία για το μοντέλο.
+
+Για να λύσουμε πιο σωστά το σύστημα, πρέπει να λάβουμε υπόψην και την γνωστή ποσότητα βιομάζας στον αντιδραστήρα. Η επίλυση του συστήματος με την παράμετρο αυτή είναι αρκετά πιο περίπλοκη. Η διαδικασία αυτής περιγράφεται στο αρχείο bioreactor_stoichiometry. Προκύπτει μία βιομάζα με τύπο \( C_{1.48}H_{2.95}O_{0.048}N_{0.11} \) η οποία έχει τις παρακάτω τιμές για τις ιδιότητες των παραπάνω πινάκων
+
+#+CAPTION: Απαραίτητες ιδιότητες βιομάζας
+| Ιδιότητα           | Τιμή              |
+|--------------------+-------------------|
+| Μοριακό Βάρος      | 23 (g/mol)        |
+| Πυκνότητα          | 1.5 (g/ml)        |
+| Θερμοχωρητικότητα  | 4443.7 (J/kg K)   |
+| Θερμότητα σύνθεσης | 240.67 (kcal/mol) |
+| Ενέργεια Gibbs     | 933.58 (kJ/mol)   |
