Making corrections and finalizing documentation for the bioreactor

--- a/Aspen/complete_bioreactor.org
+++ b/Aspen/complete_bioreactor.org
@@ -2,20 +2,20 @@
 
 Το αρχείο αυτό αποτελεί συνέχεια του αρχείου simplified_bioreactor και αναφέρεται στο πως προχωρήσαμε από το απλό μοντέλο στην ολοκληρωμένη προσωμοίωση. Το μεγάλο θέμα είναι η προσθήκη της βιομάζας στην προσωμοίωση. Όλες οι σχετικές πληροφορίες για την μοντελοποίηση της βιομάζας στο ASPEN Plus βρίσκονται στο αρχείο biomass_modeling.org. Επίσης, αξίζει να αναφερθεί πως έγινε αλλαγή στη μέθοδο από NRTL σε NRTL-HOC καθώς το πραγματικό σύστημα έχει οξικό οξύ και σύμφωνα με το Method Assistant του Aspen το NRTL-HOC είναι η κατάλληλη τροποποίηση του NRTL αν υπάρχουν οργανικά οξέα στο μίγμα.
 
-Το ρεύμα τροφοδοσίας ορίστηκε ως ένα υδατικό διάλυμα στο οποίο όλα τα συστατικά ορίζονται σε συγκέντρωση g/l. Η γλυκόζη τροφοδοτείται όπως έχει βρεθεί στη βιβλιογραφία σε συγκέντρωση 230.44 g/l ενώ η ουρία σε 2 g/l. Επίσης, ο αντιδραστήρας εμβολιάζεται με μία ποσότητα βιομάζας στην τροφοδοσία για να μπορέσει αυτή να αναπτυχθεί. Με βάση το διάγραμμα από το οποίο αντλήθηκαν και τα υπόλοιπα δεδομένα [[cite:&jinByproductFormationNovel2003]], η βιομάζα στην τροφοδοσία είναι 0.93824 g/l. Επίσης, πρέπει να προστεθεί και οξυγόνο για να διεξαχθεί η αντίδραση. Προστέθηκε λίγο πάνω από το στοιχειομετρικό οξυγόνο που αντιστοιχεί σε 34 g/l. Δεν προστέθηκε το αντίστοιχο άζωτο επειδή δημιουργούσε προβλήματα στην προσωμοίωση. Έπειτα, η ροή ανά ώρα του ρεύματος αυτού ρυθμίστηκε έτσι ώστε η ετήσια παροχή γλυκόζης να είναι αυτή που υπάρχει διαθέσιμη (32692 τόνοι). Προκύπτει, πως αυτό είναι 706.5 kmol/hr.
+Το ρεύμα τροφοδοσίας ορίστηκε ως ένα υδατικό διάλυμα στο οποίο όλα τα συστατικά ορίζονται σε συγκέντρωση g/l. Η γλυκόζη τροφοδοτείται όπως έχει βρεθεί στη βιβλιογραφία σε συγκέντρωση 230.44 g/l ενώ η ουρία σε 2 g/l. Επίσης, ο αντιδραστήρας εμβολιάζεται με μία ποσότητα βιομάζας στην τροφοδοσία για να μπορέσει αυτή να αναπτυχθεί. Με βάση το διάγραμμα από το οποίο αντλήθηκαν και τα υπόλοιπα δεδομένα [[cite:&jinByproductFormationNovel2003]], η βιομάζα στην τροφοδοσία είναι 0.93824 g/l. Επίσης, πρέπει να προστεθεί και οξυγόνο για να διεξαχθεί η αντίδραση. Προστέθηκε λίγο πάνω από το στοιχειομετρικό οξυγόνο που αντιστοιχεί σε 86 g/l. Δεν προστέθηκε το αντίστοιχο άζωτο επειδή δημιουργούσε προβλήματα στην προσωμοίωση. Έπειτα, η ροή ανά ώρα του ρεύματος αυτού ρυθμίστηκε έτσι ώστε η ετήσια παροχή γλυκόζης να είναι αυτή που υπάρχει διαθέσιμη (32692 τόνοι). Προκύπτει, πως αυτό είναι 706.5 kmol/hr.
 
 Έπειτα, ορίστηκε η στοιχειομετρία της πραγματικής αντίδρασης
-\[ 1.22C_6H_{12}O_6 + 0.024CO(NH_2)_2 + O_2 \rightarrow C_3H_8O_3 + CO_2+H_2O + 0.025 CH_3CH_2OH + 0.019CH_3COOH + Biomass \]
-όπου η βιομάζα έχει συντακτικό τύπο \( C_{3.286}H_{4.571}O_{3.311}N_{0.048} \) και στον ορισμό του ρυθμού προστέθηκε πως στο Driving Force υπάρχει και ένας όρος [biomass]^1.
+\[ 1.22C_6H_{12}O_6 + 0.024CO(NH_2)_2 + 2.55O_2 \rightarrow C_3H_8O_3 + 3.5CO_2 + 2.5H_2O + 0.025 CH_3CH_2OH + 0.019CH_3COOH + 0.1087Biomass \]
+όπου η βιομάζα έχει συντακτικό τύπο \( C_{6.2}H_{12.38}O_{0.11}N_{0.47} \) και στον ορισμό του ρυθμού προστέθηκε πως στο Driving Force υπάρχει και ένας όρος [biomass]^1.
 
-Τρέξαμε την προσωμοίωση και προκύπτει πως λόγω της αυτοκαταλυτικής φύσης της αντίδρασης στην οποία το προιόν από το οποίο εξαρτάται ο ρυθμός μπαίνει σε αρκετά μεγάλη συγκέντρωση η αντίδραση είναι ταχύτατη. Συγκεκριμένα, απαιτούνται 0.4344 ώρες για την ολοκλήρωση της αντίδρασης. Αυτό είναι ένα σαφώς εσφαλμένο συμπέρασμα, αλλά είναι αυτό που προκύπτει με βάση τα σωστά δεδομένα. Αρκετά πιθανή πηγή του σφάλματος είναι πως η στοιχειομετρία που αναφέρεται παραπάνω έχει υποτεθεί και δεν είναι η πραγματική στοιχειομετρία της μικροβιακής αντίδρασης, καθώς αυτό θα ήταν πολύ δύσκολο να προσδιοριστεί. Δεν μπορεί να χρησιμοποιηθεί το χρονικό αποτέλεσμα αυτό για διαστασιολόγηση του αντιδραστήρα λόγω της τεράστιας απόκλισης του από το πιό έμπιστο βιβλιογραφικό αποτέλεσμα, αλλά επειδή η στοιχειομετρία έχει οριστεί με βάση την βιβλιογραφία και όχι την πραγματική μικροβιακή αντίδραση, το ρεύμα εξόδου του αντιδραστήρα είναι το πραγματικό ρεύμα.
+Τρέξαμε την προσωμοίωση και προκύπτει πως λόγω της αυτοκαταλυτικής φύσης της αντίδρασης στην οποία το προιόν από το οποίο εξαρτάται ο ρυθμός μπαίνει σε αρκετά μεγάλη συγκέντρωση η αντίδραση είναι ταχύτατη. Συγκεκριμένα, απαιτούνται 0.0874969 ώρες για την ολοκλήρωση της αντίδρασης. Αυτό είναι ένα σαφώς εσφαλμένο συμπέρασμα, αλλά είναι αυτό που προκύπτει με βάση τα σωστά δεδομένα. Αρκετά πιθανή πηγή του σφάλματος είναι πως η στοιχειομετρία που αναφέρεται παραπάνω έχει υποτεθεί και δεν είναι η πραγματική στοιχειομετρία της μικροβιακής αντίδρασης, καθώς αυτό θα ήταν πολύ δύσκολο να προσδιοριστεί. Βέβαια, η δοκιμή σε αυτή την κατάσταση είναι αρκετά ολοκληρωμένη καθώς έχει ληφθεί υπόψην η πραγματική ποσότητα βιομάζας που παράγεται. Δεν μπορεί να χρησιμοποιηθεί το χρονικό αποτέλεσμα αυτό για διαστασιολόγηση του αντιδραστήρα λόγω της τεράστιας απόκλισης του από το πιό έμπιστο βιβλιογραφικό αποτέλεσμα, αλλά επειδή η στοιχειομετρία έχει οριστεί με βάση την βιβλιογραφία και όχι την πραγματική μικροβιακή αντίδραση, το ρεύμα εξόδου του αντιδραστήρα είναι το πραγματικό ρεύμα.
 
 Στο ρεύμα αυτό πρέπει να γίνουν αρκετά στάδια μέχρι να ανακτηθεί η καθαρή γλυκερόλη. Στην παρακάτω εικόνα φαίνεται η σύσταση του ρεύματος εξόδου για να αναφερθούν συνοπτικά οι διεργασίες διαχωρισμού που απαιτούνται.
 #+CAPTION: Σύσταση ρεύματος εξόδου του αντιδραστήρα
-[[file:2022-12-05_21-36-12_screenshot.png]]
+[[file:2022-12-16_18-23-40_screenshot.png]]
 
 Ο πρώτος και απλούστερος διαχωρισμός είναι της βιομάζας η οποία είναι στερεή. Μπορεί με μία δίηθηση να απομακρυνθεί εύκολα από τα υπόλοιπα.
 
-Μεγάλο πρόβλημα αποτελεί η ύπαρξη του νερού. Καθώς το νερό είναι ο διαλύτης όλων των ενώσεων στο μίγμα, είναι σε εξαιρετικά μεγάλη περιεκτικότητα σε αυτό. Το οξυγόνο και το διοξείδιο του άνθρακα είναι αέρια που φεύγουν σε μεγάλο βαθμό, και ότι μένει είναι διαλυτό στο νερό. Μπορεί να γίνει μία ξήρανση του ρεύματος για να απομακρυνθεί το νερό, καθώς η απευθείας απόσταξη θα απαιτήσει πολύ περισσότερη ενέργεια από ότι χρειάζεται για να αποστάξει νερό. Αλλά, μπορεί ως εναλλακτική να δοκιμαστεί και η κατευθείαν απόσταξη.
+Μεγάλο πρόβλημα αποτελεί η ύπαρξη του νερού. Καθώς το νερό είναι ο διαλύτης όλων των ενώσεων στο μίγμα, είναι σε εξαιρετικά μεγάλη περιεκτικότητα σε αυτό. Το οξυγόνο και το διοξείδιο του άνθρακα είναι αέρια που φεύγουν σε μεγάλο βαθμό, και ότι μένει είναι διαλυτό στο νερό. Μπορεί να γίνει μία εξάτμιση του ρεύματος για να απομακρυνθεί το νερό, καθώς η απευθείας απόσταξη θα απαιτήσει πολύ περισσότερη ενέργεια από ότι χρειάζεται για να αποστάξει νερό. Αλλά, μπορεί ως εναλλακτική να δοκιμαστεί και η κατευθείαν απόσταξη.
 
 Έπειτα, η ουρία που μένει στο δείγμα μπορεί να αντιδράσει με λιγνίνη με βάση την πατέντα των [[cite:&wallersteinMethodRecoveringGlycerol1946]] και να συμπλοκοποιηθεί ώστε να την απομακρύνουμε ενώ η αιθανόλη και το οξικό οξύ είναι πτητικές ενώσεις που μπορούν να απομακρυνθούν με απόσταξη. Με ένα συνδυασμό των διεργασιών αυτών, μπορεί να ανακτηθεί η καθαρή γλυκερόλη ο οποίος είναι και ο σκοπός της διεργασίας.
