--- a/bioreactor_stoichiometry.org
+++ b/bioreactor_stoichiometry.org
@@ -60,3 +60,17 @@
 | S_CO2    |    3.5 |
 | S_{H2O}  |    2.5 |
 και αρχικές τιμές S_b = 5, C_b = 0.208, H_b = 0.3165, O_b = 0.247, N_b = 2.5e-4. Είναι σίγουρο πως το σύστημα έχει πολλές λύσεις και αυτή δεν είναι η μοναδική που βγάζει νόημα, αλλά εφόσον βρέθηκα κάποια που βγάζει και λόγω της πολυπλοκότητας που εμπεριέχεται στο να βρεί κανείς μία λογική λύση για το σύστημα αυτό, η προσομοίωση θα προχωρήσει με αυτό.
+
+Για το σύστημα αυτό όμως δεν ισχύει το συνολικό ισοζύγιο μάζας, παρόλο που ικανοποιούνται όλα τα μερικά. Το συνολικό ισοζύγιο μάζας ικανοποιείται αν και μόνο αν \[ 117.38 + 32S_O = 44S_{CO2} + 18S_{H_2O} \]. Η ποσότητα βιομάζας είναι γνωστή και είναι 10.385. Αλλά ανάλογα με το Sb που βγαίνει, πρέπει να επιβεβαιώσουμε ότι το σύστημα έχει δώσει το κατάλληλο μοριακό βάρος για να είναι το γινόμενο τους 10.385. Διατηρώντας σταθερά τα S_CO_{2} και S_{H2O} που χρησιμοποιήθηκαν παραπάνω, βρέθηκε πως πρέπει το S_{O2} να είναι 2.55. Δίνοντας τους βαθμούς ελευθερίας αυτούς στο παραπάνω σύστημα και επιλύοντας το με αρχική τιμή τη προηγούμενη λύση, ο αλγόριθμος κάνει exit με τον κωδικό 3, που σημαίνει ότι δεν κατάφερε να συγκλίνει σε λύση επειδή η επαναληπτική διαδικασία ξεπέρασε το tolerance της. Όμως, το σφάλμα στην επίλυση είναι αρκετά μικρό. Αν αλλάξουμε τον άνθρακα της λύσης που δίνει έτσι ώστε το μοριακό βάρος να βγαίνει τέτοιο ώστε να ισχύει το συνολικό ισοζύγιο μάζας, τότε μάλλον είμαστε καλά. Δοκιμάζοντας αυτό παίρνουμε τον παρακάτω πίνακα για τις μεταβλητές του συστήματος.
+| Άγνωστος |   Τιμή |
+|----------+--------|
+| S_b      | 0.1087 |
+| C_b      |  6.225 |
+| H_b      | 12.369 |
+| O_b      | 0.1133 |
+| N_b      | 0.4736 |
+| S_{O2}   |   2.55 |
+| S_CO2    |    3.5 |
+| S_{H2O}  |    2.5 |
+
+Περνόντας τα καινούργια αυτά δεδομένα στο ασπεν και επιβεβαιώνοντας ότι η παροχή οξυγόνου στην τροφοδοσία επαρκεί για την αντίδραση (και δεν είναι σε μεγάλη περίσσεια επειδή δεν υπάρχει λόγος), το ασπεν τρέχει κανονικά την προσομοίωση και βγάζει τα σωστά αποτελέσματα για την ροή μάζας της βιομάζας του μικροοργανισμού στην έξοδο του αντιδραστήρα. Αξίζει να σημειωθεί πως για να είναι σωστός ο ρυθμός της αντίδρασης, πρέπει να διαιρέσουμε την σταθερά στο driving force με τον στοιχειομετρικό συντελεστή της βιομάζας καθώς ο ρυθμός που έχει εισαχθεί είναι ο ρυθμός παραγωγής βιομάζας (μοντέλο Monod). Ο χρόνος παραμονής που προκύπτει δεν έχει καμία απολύτως σχέση και πάλι, άρα σαντ, αλλά πλέον η προσομοίωση είναι σίγουρα (περίπου, κανείς δεν είναι βέβαιος ποιά είναι η πραγματική λύση του συστήματος) σωστή. 
