--- a/Aspen/lignin_combustion.org
+++ b/Aspen/lignin_combustion.org
@@ -3,7 +3,7 @@
 Η καύση της λιγνίνης είναι ένα σημαντικό κομμάτι της διεργασίας μας. Παράγει θερμά καυσαέρια από τα οποία μπορεί να παραχθεί ατμός για να θερμάνει άλλα ρεύματα της διεργασίας. Η λιγνίνη που έχουμε διαθέσιμη είναι 5169.33 kg/hr. Για την προσομοίωση, θα υποτεθεί η λιγνίνη με βάση τους [[cite:&wooleyDevelopmentASPENPhysical1996]], της οποίας η ανάλυση έχει γίνει στο αρχείο lignin_cellulose_conventionals.org. Με το μοριακό βάρος της (122.493), η μολαρική ροή λιγνίνης είναι 42.2 kmol/hr.
 
 Η αντίδραση καύσης που θεωρούμε είναι η
-\[ C_{7.3}H_{13.9}O_{1.3} + 10.125O_2 \rightarrow 6.95 H_2O + 7.3CO_2  \] η οποία είναι πρώτης τάξης ως προς την λιγνίνη με ενέργεια ενεργοποίησης 46.68 kJ/mol και προεκθετικό παράγοντα 12.96 h^{-1} ή 0.216 min^{-1} ή 3.6e-3 s^{-1}. Η αντίδραση θα γίνει σε αντιδραστήρα συνεχούς ροής τύπου CSTR καθώς θέλουμε συνεχή ροή ατμού για θέρμανση των άλλων διεργασιών μας.
+\[ C_{7.3}H_{13.9}O_{1.3} + 10.125O_2 \rightarrow 6.95 H_2O + 7.3CO_2  \] η οποία είναι πρώτης τάξης ως προς την λιγνίνη με ενέργεια ενεργοποίησης 46.68 kJ/mol και προεκθετικό παράγοντα 12.96 h^{-1} ή 0.216 min^{-1} ή 3.6e-3 s^{-1} [[cite:&farrokhThermogravimetricAnalysisLignin2019]] . Η αντίδραση θα γίνει σε αντιδραστήρα συνεχούς ροής τύπου CSTR καθώς θέλουμε συνεχή ροή ατμού για θέρμανση των άλλων διεργασιών μας.
 
 Ο αντιδραστήρας θα λειτουργεί σε πίεση 1 bar (σε πρώτη φάση) ορίζοντας το heat duty, καθώς γνωρίζουμε πως η θερμογόνος δύναμη της λιγνίνης είναι 23.5 MJ/kg και τροφοδοτούμε με 5169.33 kg/hr. Άρα 33.744 MW θερμότητα. Επίσης, ο αντιδραστήρας πρέπει να λειτουργεί με μία περίσσεια αέρα. Στη μελέτη των [cite:@gonzalezCombustionOptimisationBiomass2004] για την καύση πυρηνόξυλου υπολογίστηκε πως χρειάζεται ένα λ = 2.5. Άρα, η παροχή οξυγόνου θα είναι 25 φορές η μολαρική παροχή λιγνίνης και επειδή στην πράξη χρησιμοποιούμε αέρα και όχι οξυγόνου, πρέπει να βάλουμε και 3.76 φορές το οξυγόνο σε άζωτο. Άρα, το άζωτο θα έχει παροχή 95 φορές την παροχή λιγνίνης. Αυτές οι τιμές αντιστοιχούν σε 1068.2 kmol/hr οξυγόνο και 4016.4 kmol/hr άζωτο. Στα προιόντα της καύσης θα αγνοήσουμε την παρούσια NOx και θα πούμε ότι παράγεται μόνο νερό και διοξείδιο του άνθρακα πέρα από την περίσσεια αέρα.
 
