Adding the final descriptions for most blocks.
Blocks 200, 300, 400 are ready and 500, 600, 700 are almost ready. In
the next commit will be their complete forms and in the next one the
final assignment.

--- a/bioreactor_stoichiometry.org
+++ b/bioreactor_stoichiometry.org
@@ -9,7 +9,7 @@
 
 Στην αντίδραση συμμετέχουν 32692.2 tn γλυκόζη, 283.74 tn ουρία και 567.57 tn CSL. Όμως, βάση προηγούμενων παραδοχών, έχουμε πει πως δεν αντιδρά όλη η ουρία και όλο το CSL. Έχουμε υποθέσει ότι αντιδρούν τα 3/4 της ουρίας και το μισό CSL. Άρα, 212.8 tn ουρία και 283.79 tn CSL. Τα προιόντα είναι 13643 tn γλυκερόλη, 640.68 tn αραβιτόλη, 168.82 tn αιθανόλη και 165.99 tn οξικό οξύ. Αρχικά, πρέπει να μετατρεπούν οι ποσότητες αυτές σε mol και έπειτα, από τις αναλογίες τους να βρεθούν οι συντελεστές. Ως βάση των υπολογισμών θα χρησιμοποιηθεί το 1 mol γλυκερόλης.
 
-Οι σχετικοί υπολογισμοί φαίνονται στο ομώνυμο αρχείο matlab στον φάκελο /Calculations.
+Οι [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Calculations/bioreactor_stoichiometry.m][σχετικοί υπολογισμοί]] φαίνονται στο ομώνυμο αρχείο matlab στον φάκελο /Calculations.
 
 Η στοιχειομετρία της αντίδρασης που προκύπτει είναι
 \[ 1.22S + 0.024U + 0.049C \rightarrow G + 0.028Ar + 0.025E + 0.019Ac \]
@@ -33,15 +33,13 @@
 
 Αξίζει να αναφερθεί πως στον πίνακα αυτό έχουν υπερεκτιμηθεί ορισμένα από τα συστατικά σε σχέση με τις τιμές τους στην αντίστοιχη βιβλιογραφία (δες [[id:d01ccf54-e2ce-4a6b-b826-652acf6a4c65][Corn Steep Liquor (CSL) - Ένα Χρήσιμο Θρεπτικό Συστατικό σε Μικροβιακές Καλλιέργειες]]). Αυτό συμβαίνει επειδή με βάση τις τιμές εκείνες ήταν αδύνατον να αθροιστούν τα συστατικά στη μονάδα.
 
-Υπενθυμίζεται πως έχει προσδιοριστεί μία τεχνική κινητική παραγωγής γλυκερόλης συναρτήσει της γλυκόζης ίση με \[ r_G = 0.257 [S]^{0.335} \], η οποία με βάση αυτή τη στοιχειομετρία είναι και ο συνολικός ρυθμός της αντίδρασης (καθώς ο συντελεστής της γλυκερόλης είναι μονάδα). Στην πραγματικότητα, ο ρυθμός ανάπτυξης εξαρτάται από την συγκέντρωση υποστρώματος και βιομάζας με βάση το μοντέλο Monod και υπάρχει πιθανότητα να παίζουν ρόλο και οι συγκεντρώσεις των άλλων θρεπτικών συστατικών. Όμως, καθώς έχει γίνει η παραδοχή πως η γλυκόζη είναι το σημαντικό (και το περιοριστικό) υπόστρωμα, η διαστασιολόγηση του αντιδραστήρα θα γίνει με βάση τον ρυθμό αυτόν.
- 
 Εφόσον στην αντίδραση αυτή δεν έχουν συμπεριληφθεί O_2 στα αντιδρώντα και βιομάζα, H_2O και CO_2 στα προιόντα, δεν θα κλείνουν τα στοιχειακά ισοζύγια για την αντίδραση. Απουσία άλλων δεδομένων, οι συντελεστές Ο_2, CO_2, H_2O και βιομάζας θα ληφθούν όλοι ίσοι με την μονάδα και ο τύπος της βιομάζας θα προκύψει έτσι ώστε να κλείνει το ισοζύγιο. Αν συμπεριληφθούν O_2 στα αντιδρώντα και CO_2, H_2O στα προιόντα όλα με συντελεστή μονάδα, τότε προκύπτει πως η βιομάζα θα έχει τύπο \( C_{3.167}H_{4.333}O_{3.217}N_{0.05} \). Άρα, η συνολική μικροβιακή αντίδραση που διεξάγεται θα είναι η
 \[ 1.22S + 0.24U + 0.049C + O_2 \rightarrow C_{3.167}H_{4.333}O_{3.217}N_{0.05} + G + 0.028Ar +0.025E + 0.019Ac + H_2O +CO_2 \]
 
 Σε πρώτη φάση, μπορεί η προσωμοίωση να γίνει στην απλουστευμένη περίπτωση ότι γλυκόζη και οξυγόνο, δίνουν γλυκερόλη, διοξείδιο του άνθρακα και νερό, κυρίως για να εξοικειωθώ με τους batch αντιδραστήρες στο ασπεν και να δοκιμάσω κάτι. Σε επόμενη φάση θα αναλυθεί η παραπάνω συνολική αντίδραση και οι διαχωρισμοί που απαιτεί. Για την στοιχειομετρία της αντίδρασης \( C_6H_{12}O_6 + O_2 \rightarrow C_3H_8O_3 + CO_2 +H_2O \) έχουμε 2 βαθμούς ελευθερίας ενώ οι υπόλοιποι συντελεστές καθορίζονται από τα mass balances C, H, O. Αν υποθέσουμε ότι οι συντελεστές γλυκερόλης και γλυκόζης είναι ίδιοι με αυτούς της συνολικής αντίδρασης τότε έχουμε ένα πλήρως ορισμένο σύστημα. Και καθώς αυτά τα δύο προκύπτουν από τα ίδια πειραματικά δεδομένα με την κινητική, είναι μία έγκυρη πηγή. Άρα, σε πρώτη φάση θα εξεταστεί η αντίδραση
 \( 1.22 C_6H_{12}O_6 + 3.82O_2 \rightarrow C_3H_8O_3 + 4.32CO_2 + 3.32H_2O \) .
 
-Όπως έχει αναφερθεί στα αρχεία των σχετικών προσομοιώσεων, ο ρυθμός της αντίδρασης αυτής είναι πολύ μεγαλύτερος από ότι θα έπρεπε με αποτέλεσμα η αντίδραση να τελειώνει σε μισή ώρα. Μάλλον, αυτό που φταίει είναι ότι παράγεται πολύ βιομάζα. Όμως, διαπιστώθηκε πως ξέρουμε την τελική συγκέντρωση της βιομάζας στον αντιδραστήρα. Όμως, δεν μπορούμε να ξέρουμε τον ακριβή στοιχειομετρικό συντελεστή αν δεν ξέρουμε τον μοριακό τύπο, για αυτό η γνώση αυτή προσθέτει μία παραπάνω εξίσωση. Ακόμη, ξέρουμε πως ο αντιδραστήρας λειτουργεί τυπικά με αερισμό 0.1-0.5 vvm (volume of air per volume of liquid per minute). Άρα, είναι γνωστός ο συντελεστής του οξυγόνου και δεν αποτελεί άγνωστο. Άρα, οι εξισώσεις που διαμορφώνονται είναι 5 με 7 αγνώστους.
+Όπως έχει αναφερθεί στα αρχεία των σχετικών προσομοιώσεων, ο ρυθμός της αντίδρασης αυτής είναι πολύ μεγαλύτερος από ότι θα έπρεπε με αποτέλεσμα η αντίδραση να τελειώνει σε μισή ώρα. Μάλλον, αυτό που φταίει είναι ότι παράγεται πολύ βιομάζα. Όμως, διαπιστώθηκε πως ο συντελεστής της βιομάζας δεν είναι πραγματικά μονάδα, αλλά ξέρουμε την τελική συγκέντρωση της βιομάζας στον αντιδραστήρα. Όμως, δεν μπορούμε να ξέρουμε τον ακριβή στοιχειομετρικό συντελεστή αν δεν ξέρουμε τον μοριακό τύπο, για αυτό η γνώση αυτή προσθέτει μία παραπάνω εξίσωση. Ακόμη, ξέρουμε πως ο αντιδραστήρας λειτουργεί τυπικά με αερισμό 0.1-0.5 vvm (volume of air per volume of liquid per minute). Άρα, είναι γνωστός ο συντελεστής του οξυγόνου και δεν αποτελεί άγνωστο. Άρα, οι εξισώσεις που διαμορφώνονται είναι 5 με 7 αγνώστους.
 
 Το σύστημα είναι ως εξής
 \[ \begin{align*} 4.167 = SbCb + S_{CO2} \\ 6.333 = SbHb + 2S_{H_2O} \\ 4.94 = SbOb + 2S_{CO2} + S_{H_2O} \\ 0.05 = SbNb \\ Sb = \frac{10.385}{12Cb+16Ob+Hb+14Nb}    \end{align*} \]
@@ -73,4 +71,4 @@
 | S_CO2    |    3.5 |
 | S_{H2O}  |    2.5 |
 
-Περνόντας τα καινούργια αυτά δεδομένα στο ασπεν και επιβεβαιώνοντας ότι η παροχή οξυγόνου στην τροφοδοσία επαρκεί για την αντίδραση (και δεν είναι σε μεγάλη περίσσεια επειδή δεν υπάρχει λόγος), το ασπεν τρέχει κανονικά την προσομοίωση και βγάζει τα σωστά αποτελέσματα για την ροή μάζας της βιομάζας του μικροοργανισμού στην έξοδο του αντιδραστήρα. Αξίζει να σημειωθεί πως για να είναι σωστός ο ρυθμός της αντίδρασης, πρέπει να διαιρέσουμε την σταθερά στο driving force με τον στοιχειομετρικό συντελεστή της βιομάζας καθώς ο ρυθμός που έχει εισαχθεί είναι ο ρυθμός παραγωγής βιομάζας (μοντέλο Monod). Ο χρόνος παραμονής που προκύπτει δεν έχει καμία απολύτως σχέση και πάλι, άρα σαντ, αλλά πλέον η προσομοίωση είναι σίγουρα (περίπου, κανείς δεν είναι βέβαιος ποιά είναι η πραγματική λύση του συστήματος) σωστή. 
+Περνόντας τα καινούργια αυτά δεδομένα στο ασπεν και επιβεβαιώνοντας ότι η παροχή οξυγόνου στην τροφοδοσία επαρκεί για την αντίδραση (και δεν είναι σε μεγάλη περίσσεια επειδή δεν υπάρχει λόγος), το ασπεν τρέχει κανονικά την προσομοίωση και βγάζει τα σωστά αποτελέσματα για την ροή μάζας της βιομάζας του μικροοργανισμού στην έξοδο του αντιδραστήρα. Αξίζει να σημειωθεί πως για να είναι σωστός ο ρυθμός της αντίδρασης, πρέπει να διαιρέσουμε την σταθερά στο driving force με τον στοιχειομετρικό συντελεστή της βιομάζας καθώς ο ρυθμός που έχει εισαχθεί είναι ο ρυθμός παραγωγής βιομάζας (μοντέλο Monod). Ο χρόνος παραμονής που προκύπτει δεν έχει καμία απολύτως σχέση και πάλι, αλλά πλέον η προσομοίωση είναι σίγουρα (περίπου, κανείς δεν είναι βέβαιος ποιά είναι η πραγματική λύση του συστήματος) σωστή. 
