--- a/c_glycerinogenes_rate_expressions.org
+++ b/c_glycerinogenes_rate_expressions.org
@@ -1,6 +1,6 @@
 #+TITLE: Κινητικοί Υπολογισμοί για τον C. glycerinogenes
 
-Ο μικροοργανισμός C. glycerinogenes είναι μία οσμοφιλική ζύμη η οποία έχει ως ιδιαίτερο χαρακτηριστικό την πολύ υψηλή παραγωγικότητα γλυκόζης με μικρές απώλειες σε άλλες πολυόλες. Στην βιβλιογραφία (την λίγη που υπάρχει) δεν βρέθηκε κάποια κινητική μελέτη της ανάπτυξης του μικροοργανισμού. Βρέθηκε όμως ένα διάγραμμα χρόνου με μεταβολή των συγκεντρώσεων γλυκόζης, γλυκερόλης και βιομάζας από τους [[cite:&jinByproductFormationNovel2003]].
+Ο μικροοργανισμός C. glycerinogenes είναι μία οσμοφιλική ζύμη η οποία έχει ως ιδιαίτερο χαρακτηριστικό την πολύ υψηλή παραγωγικότητα γλυκόζης με μικρές απώλειες σε άλλες πολυόλες. Στην βιβλιογραφία δεν βρέθηκε κάποια κινητική μελέτη της ανάπτυξης του μικροοργανισμού. Βρέθηκε όμως ένα διάγραμμα χρόνου με μεταβολή των συγκεντρώσεων γλυκόζης, γλυκερόλης και βιομάζας από τους [[cite:&jinByproductFormationNovel2003]].
 
 Για τον πιο ακριβή κινητικό προσδιορισμό της βιοαντίδρασης από τα πειραματικά δεδομένα αυτά, πρέπει να γίνουν υπολογισμοί, στους οποίους χρειάζονται οι ρυθμοί σε κάθε πειρραματικό σημείο. Ο ρυθμός ανάπτυξης βιομάζας, παραγωγής γλυκερόλης και κατανάλωσης γλυκόζης έχουν υπολογιστεί από παραγώγους της μορφής c = f(t). Η κατανάλωση της γλυκόζης περιγράφεται με R^2 = 0.990 από την εξίσωση \( S = 0.008t^2 - 3.531t + 243.428 \) με παράγωγο την \( \frac{dS}{dt} = 0.016t - 3.531 \)
 
